# hring

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
docs/: Capacity.md  Design.md  FeedbackIssues.md  Keybinds.md
examples/: blue_graphic.toml  config.json  green_graphic.toml  orange_graphic.toml
src/: app.rs  config.rs  data.rs  data_impl.rs  helpers.rs  main.rs  theme.rs  ui.rs  utils.rs
src/config/: converter.rs  file_loader.rs
