[package]
name = "hring"
version = "0.2.0"
authors = ["Xhelgi <helgi@proton.me>"]
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"
bincode = { version = "2.0.1"}
homedir = "0.3.6"
eframe = "0.33.3"
freedesktop_entry_parser = "2.0.1"

[profile.release]
opt-level = 'z'     
lto = true  
codegen-units = 1
strip = true 